<resources>
    <string name="welcome">Добро Пожаловать в FrameX</string>


    <string name="app_name">FrameX</string>
    <string name="tab_movie">Фильмы</string>
    <string name="tab_serial">Сериалы</string>
    <string name="tab_favorite">Избранные</string>
    <string name="tab_recent">Недавние Просмотры</string>
    <string name="tab_added">Добавленные</string>
    <string name="textView_label_category_favorite">Избранные</string>
    <string name="textView_label_category_recent">Моя история</string>
    <string name="textView_label_category_subscription">Мои подписки</string>
    <string name="textView_name_group_category">Категории ТОП-100 x</string>


    <string name="textView_help_search_description">Введетие ключевые слова которые могут быть в описании</string>
    <string name="textView_favorite_not_found">Вы еще ничего не добавили в Избранное ... 🎬</string>
    <string name="network_warning">Интернет не доступен</string>
    <string name="new_type">Новинки этого года</string>
    <string name="comedy_type">Комедия</string>
    <string name="horror_type">Ужасы</string>
    <string name="fantasy_type">Фентези</string>
    <string name="drama_type">Драма</string>
    <string name="action_type">Боевик</string>
    <string name="criminal_type">Криминал</string>
    <string name="biography_type">Биография</string>
    <string name="documental_type">Документальный фильм</string>
    <string name="adventure_type">Приключения</string>
    <string name="detective_type">Детектив</string>
    <string name="text_button_look">Смотреть</string>
    <string name="text_button_subscription">Подписаться</string>
    <string name="text_button_unsubscribe">Отписаться</string>

    <string name="edit_text_hint_search">Поиск</string>
    <string name="edit_text_hint_search_description">Поиск по описанию</string>

    <string name="tv_help_update_search_content">🎬 Введите название Контента который хотите добавить в базу</string>
    <string name="tv_help_update_search_list_to_update">📃 Список пуст ...</string>
    <string name="tv_help_update_search_not_found">🔍 Ничего не найдено ... Попробуйте поиск с оригинальным названием</string>
    <string name="info_for_update">Обновление нужно для того что-бы вы получили актуальную базу фильмов и сериалов, мы оптимизировали алгоритм так что бы всё проходило быстро, вы спокойно <b> можете покинуть страницу загрузки </b>, обновление будет происходить фоном.</string>
    <string name="info_for_update_only_one_content"><b>Нажмите</b> кнопку ниже если вы хотите <b>обновить определённый контент</b> который недавно вышел или который не попал в базу</string>
</resources>