<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:layout_marginTop="10dp">

    <androidx.cardview.widget.CardView
        android:id="@+id/new_type"
        android:layout_width="370dp"
        android:layout_height="wrap_content"
        app:cardCornerRadius="5dp"
        android:layout_marginBottom="10dp"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center"
            >
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:src="@drawable/new_content"
                android:scaleType="centerCrop"
                android:alpha="0.8"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/new_type"
                android:fontFamily="sans-serif"
                android:textStyle="bold"
                android:textSize="20sp"
                android:gravity="center"
                android:textColor="#FBFBFB"
                android:letterSpacing="0.1"
                android:background="#FF6767"
                />
        </LinearLayout>
    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:id="@+id/comedy"
        android:layout_width="370dp"
        android:layout_height="wrap_content"
        app:cardCornerRadius="5dp"
        android:layout_marginBottom="10dp"
        >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        >
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:src="@drawable/comedy"
        android:alpha="0.8"
        android:scaleType="centerCrop"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/comedy_type"
        android:fontFamily="sans-serif"
        android:textStyle="bold"
        android:textSize="20sp"
        android:gravity="center"
        android:textColor="#FBFBFB"
        android:letterSpacing="0.1"
        android:background="#FF6767"
        />
    </LinearLayout>
    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:id="@+id/fantasy"
        android:layout_width="370dp"
        android:layout_height="wrap_content"
        app:cardCornerRadius="5dp"
        android:layout_marginBottom="10dp"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center"
            >
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:src="@drawable/fanstasy"
                android:alpha="0.8"
                android:scaleType="centerCrop"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fantasy_type"
                android:fontFamily="sans-serif"
                android:textStyle="bold"
                android:textSize="20sp"
                android:gravity="center"
                android:textColor="#FBFBFB"
                android:letterSpacing="0.1"
                android:background="#FF6767"
                />
        </LinearLayout>
    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:id="@+id/drama"
        android:layout_width="370dp"
        android:layout_height="wrap_content"
        app:cardCornerRadius="5dp"
        android:layout_marginBottom="10dp"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center"
            >
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:src="@drawable/darma"
                android:alpha="0.8"
                android:scaleType="centerCrop"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/drama_type"
                android:fontFamily="sans-serif"
                android:textStyle="bold"
                android:textSize="20sp"
                android:gravity="center"
                android:textColor="#FBFBFB"
                android:letterSpacing="0.1"
                android:background="#FF6767"
                />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/action"
        android:layout_width="370dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        app:cardCornerRadius="5dp"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center"
            >
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:src="@drawable/boevik"
                android:alpha="0.8"
                android:scaleType="centerCrop"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/action_type"
                android:fontFamily="sans-serif"
                android:textStyle="bold"
                android:textSize="20sp"
                android:gravity="center"
                android:textColor="#FBFBFB"
                android:letterSpacing="0.1"
                android:background="#FF6767"
                />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/detective"
        android:layout_width="370dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        app:cardCornerRadius="5dp"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center"
            >
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:src="@drawable/detective"
                android:alpha="0.8"
                android:scaleType="centerCrop"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/detective_type"
                android:fontFamily="sans-serif"
                android:textStyle="bold"
                android:textSize="20sp"
                android:gravity="center"
                android:textColor="#FBFBFB"
                android:letterSpacing="0.1"
                android:background="#FF6767"
                />
        </LinearLayout>
    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:id="@+id/horror"
        android:layout_width="370dp"
        android:layout_height="wrap_content"
        app:cardCornerRadius="5dp"
        android:layout_marginBottom="10dp"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center"
            >
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:src="@drawable/ujasi"
                android:alpha="0.8"
                android:scaleType="centerCrop"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/horror_type"
                android:fontFamily="sans-serif"
                android:textStyle="bold"
                android:textSize="20sp"
                android:gravity="center"
                android:textColor="#FBFBFB"
                android:letterSpacing="0.1"
                android:background="#FF6767"
                />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/criminal"
        android:layout_width="370dp"
        android:layout_height="wrap_content"
        app:cardCornerRadius="5dp"
        android:layout_marginBottom="10dp"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center"
            >
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:src="@drawable/criminal"
                android:alpha="0.8"
                android:scaleType="centerCrop"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/criminal_type"
                android:fontFamily="sans-serif"
                android:textStyle="bold"
                android:textSize="20sp"
                android:gravity="center"
                android:textColor="#FBFBFB"
                android:letterSpacing="0.1"
                android:background="#FF6767"
                />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/adventure"
        android:layout_width="370dp"
        android:layout_height="wrap_content"
        app:cardCornerRadius="5dp"
        android:layout_marginBottom="10dp"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center"
            >
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:src="@drawable/priklyhenia"
                android:alpha="0.8"
                android:scaleType="centerCrop"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/adventure_type"
                android:fontFamily="sans-serif"
                android:textStyle="bold"
                android:textSize="20sp"
                android:gravity="center"
                android:textColor="#FBFBFB"
                android:letterSpacing="0.1"
                android:background="#FF6767"
                />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/biography"
        android:layout_width="370dp"
        android:layout_height="wrap_content"
        app:cardCornerRadius="5dp"
        android:layout_marginBottom="10dp"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center"
            >
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:src="@drawable/biogriphik"
                android:alpha="0.8"
                android:scaleType="centerCrop"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/biography_type"
                android:fontFamily="sans-serif"
                android:textStyle="bold"
                android:textSize="20sp"
                android:gravity="center"
                android:textColor="#FBFBFB"
                android:letterSpacing="0.1"
                android:background="#FF6767"
                />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/documental"
        android:layout_width="370dp"
        android:layout_height="wrap_content"
        app:cardCornerRadius="5dp"
        android:layout_marginBottom="10dp"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center"
            >
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:src="@drawable/documentalks"
                android:alpha="0.8"
                android:scaleType="centerCrop"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/documental_type"
                android:fontFamily="sans-serif"
                android:textStyle="bold"
                android:textSize="20sp"
                android:gravity="center"
                android:textColor="#FBFBFB"
                android:letterSpacing="0.1"
                android:background="#FF6767"
                />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>